# RDK_YOCTO

./: Makefile  Makefile.am  Makefile.in  README.md  autohello.c  config.status  configure  configure.ac  hello  hello.c
